# namedtuple

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: unittest.yaml
benchmarks/benchmark1/: generate.py  main_hana_c020m015.cpp  main_hana_c025m015.cpp  main_hana_c030m015.cpp  main_hana_c035m015.cpp  main_hana_c040m015.cpp  main_native_c020m015.cpp  main_native_c025m015.cpp  main_native_c030m015.cpp  main_native_c035m015.cpp  main_native_c040m015.cpp  main_nt_c020m015.cpp  main_nt_c025m015.cpp  main_nt_c030m015.cpp  main_nt_c035m015.cpp  main_nt_c040m015.cpp  run.sh
include/: namedtuple.h
include/namedtuple/: namedtuple.h
include/namedtuple/util/: argparse.h  collection.h  foreach.h  operators.h  sum.h
tests/test1/: main.cpp
tests/test2/: main.cpp
tests/test3/: main.cpp
