cmake_minimum_required(VERSION 3.16)
project(namedtuple)
set(CMAKE_CXX_STANDARD 17)
find_package(GTest REQUIRED)
include_directories(include)
add_executable(test1 tests/test1/main.cpp)
add_executable(test2 tests/test2/main.cpp)
add_executable(test3 tests/test3/main.cpp)
target_link_libraries(test1 GTest::gtest GTest::gtest_main)
target_link_libraries(test2 GTest::gtest GTest::gtest_main)
target_link_libraries(test3 GTest::gtest GTest::gtest_main)
